<resources>
    <string name="action_settings">Settings</string>

    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Cakes</string>

    <!-- Label for overflow menu option that inserts fake cake data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all cake data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Cakes</string>

    <!-- Title text for the empty view, which describes the empty image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a cake [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a cake</string>

    <!-- Title for the activity to add a new cake [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_cake">Add a Cake</string>

    <!-- Title for the activity to edit an existing cake [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_cake">Edit Cake</string>

    <!-- Label for editor menu option to save cake and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current cake [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new cake has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_cake_successful">Cake saved</string>

    <!-- Toast message in editor when new cake has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_cake_failed">Error with saving cake</string>

    <!-- Toast message in editor when current cake was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_cake_successful">Cake updated</string>

    <!-- Toast message in editor when current cake has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_cake_failed">Error with updating cake</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current cake [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current cake was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_cake_successful">Cake deleted</string>

    <!-- Toast message in editor when current cake has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_cake_failed">Error with deleting cake</string>

    <!-- Dialog message to ask the user to confirm deleting the current cake [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this cake?</string>

    <!-- Dialog button text for the option to confirm deleting the current cake [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current cake [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="label_cake_name">Name</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="label_cake_quantity">Quantity</string>

    <!-- Label for type information in the editor [CHAR LIMIT=30] -->
    <string name="label_cake_type">Occasion</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="label_cake_price">Price ($)</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_cake_name">Enter Name</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_cake_quantity">Enter Quantity</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_cake_price">Enter Price</string>

    <!-- Label for dropdown menu option if the cake's type is unknown [CHAR LIMIT=20] -->
    <string name="occasion_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the cake is bread [CHAR LIMIT=20] -->
    <string name="occasion_birthday">Birthday</string>

    <!-- Label for dropdown menu option if the cake is cake [CHAR LIMIT=20] -->
    <string name="occasion_wedding">Wedding</string>

    <!-- Label for the cake's quantity if the quantity is unknown [CHAR LIMIT=20] -->
    <string name="quantity_unknown">Unknown quantity</string>

</resources>
